--- a/index.html
+++ b/index.html
@@ -103,7 +103,14 @@
                 </div>
             </li>
         </ul>
-        <div class="line"></div>
+        <div class="line">
+            <div class="dots"></div>
+            <div class="dots"></div>
+            <div class="dots"></div>
+            <div class="dots"></div>
+            <div class="dots"></div>
+            <div class="dots"></div>
+        </div>
             
     </section>
     
