--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Adcropper UI Kit</title>
-    <meta name="description" content="UI Kit for Adcropper">
+    <title>UI Kit</title>
+    <meta name="description" content="UI Kit">
     <meta name="Halis" content="UI KIT">    
 
     <link rel="stylesheet" href="style.css">
